ensure galaxies are distributed between ranks

--- a/loading_scsam.ipynb
+++ b/loading_scsam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b9aba07b",
    "metadata": {},
    "outputs": [],
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "3e4ddc54",
    "metadata": {},
    "outputs": [],
@@ -496,6 +496,8 @@
     "\n",
     "subvolumes = [\"0_0_0\"]\n",
     "\n",
+    "subvol = \"0_0_0\"\n",
+    "\n",
     "sam_dir = '/mnt/ceph/users/lperez/AGNmodelingSCSAM/sam_newAGNcode_forestmgmt_fidSAM'\n",
     "\n",
     "bh_mass = []\n",
@@ -509,33 +511,31 @@
     "\n",
     "with h5py.File(f'{sam_dir}/volume.hdf5', 'r') as file:\n",
     "\n",
-    "    for subvol in subvolumes:\n",
+    "    # Black hole properties in subvolume\n",
+    "    bh_mass_subvol = file[f'{subvol}/Galprop/GalpropMBH'][:]   # 1e9 Msun\n",
+    "    bh_mdot_subvol = file[f'{subvol}/Galprop/GalpropMaccdot_bright'][:] # Msun/yr\n",
+    "    bh_pos_subvol = file[f'{subvol}/Galprop/GalpropPos'][:]             # ckpc/h\n",
+    "    redshift_subvol = file[f'{subvol}/Galprop/GalpropRedshift'][:]\n",
     "\n",
-    "        # Black hole properties in subvolume\n",
-    "        bh_mass_subvol = file[f'{subvol}/Galprop/GalpropMBH'][:]   # 1e9 Msun\n",
-    "        bh_mdot_subvol = file[f'{subvol}/Galprop/GalpropMaccdot_bright'][:] # Msun/yr\n",
-    "        bh_pos_subvol = file[f'{subvol}/Galprop/GalpropPos'][:]             # ckpc/h\n",
-    "        redshift_subvol = file[f'{subvol}/Galprop/GalpropRedshift'][:]\n",
+    "    # Star properties\n",
+    "    #stellar_mass = file[f'{subvol}/Galprop/GalpropMstar'][:]\n",
+    "    #stellar_Z = file[f'{subvol}/Galprop/GalpropZstar'][:]\n",
     "\n",
-    "        # Star properties\n",
-    "        #stellar_mass = file[f'{subvol}/Galprop/GalpropMstar'][:]\n",
-    "        #stellar_Z = file[f'{subvol}/Galprop/GalpropZstar'][:]\n",
+    "    # SFH properties \n",
+    "    sfh.append(file[f'{subvol}/Histprop/HistpropSFH'][:]) # Msun\n",
+    "    z_hist.append(file[f'{subvol}/Histprop/HistpropZt'][:]) # Zsun\n",
+    "    \n",
+    "    #birth_halo_ID = file[f'{subvol}/Linkprop/LinkpropBirthHaloID'][:] \n",
+    "    #halo_index = file[f'{subvol}/Linkprop/LinkpropHaloIndex'][:] \n",
+    "    #to_gal_prop_snapshot = file[f'{subvol}/Linkprop/LinkproptoGalprop_Snapshot'][:]\n",
     "\n",
-    "        # SFH properties \n",
-    "        sfh.append(file[f'{subvol}/Histprop/HistpropSFH'][:]) # Msun\n",
-    "        z_hist.append(file[f'{subvol}/Histprop/HistpropZt'][:]) # Zsun\n",
-    "        \n",
-    "        #birth_halo_ID = file[f'{subvol}/Linkprop/LinkpropBirthHaloID'][:] \n",
-    "        #halo_index = file[f'{subvol}/Linkprop/LinkpropHaloIndex'][:] \n",
-    "        #to_gal_prop_snapshot = file[f'{subvol}/Linkprop/LinkproptoGalprop_Snapshot'][:]\n",
-    "\n",
-    "        # For each SFH age bin, get the corresponding BH properties from Galprop\n",
-    "        redshift.append(file[f'{subvol}/Linkprop/LinkpropRedshift'][:]) # same as from Galprop\n",
-    "        to_gal_prop = file[f'{subvol}/Linkprop/LinkproptoGalprop'][:]\n",
-    "        for i in to_gal_prop:\n",
-    "            bh_mass.append(bh_mass_subvol[i])\n",
-    "            bh_mdot.append(bh_mdot_subvol[i])\n",
-    "            bh_pos.append(bh_pos_subvol[i])\n",
+    "    # For each SFH age bin, get the corresponding BH properties from Galprop\n",
+    "    redshift.append(file[f'{subvol}/Linkprop/LinkpropRedshift'][:]) # same as from Galprop\n",
+    "    to_gal_prop = file[f'{subvol}/Linkprop/LinkproptoGalprop'][:]\n",
+    "    for i in to_gal_prop:\n",
+    "        bh_mass.append(bh_mass_subvol[i])\n",
+    "        bh_mdot.append(bh_mdot_subvol[i])\n",
+    "        bh_pos.append(bh_pos_subvol[i])\n",
     "\n",
     "    sfh_t_bins = file[f'{subvol}/Header/SFH_tbins'][:]\n",
     "\n",
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "d032d50d",
    "metadata": {},
    "outputs": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "20c4a339",
    "metadata": {},
    "outputs": [
@@ -764,6 +764,8 @@
    "source": [
     "# How many galaxies to load\n",
     "N = 10\n",
+    "\n",
+    "# For my actual code use all galaxies in the subvolume\n",
     "\n",
     "# Load galaxies with particle method\n",
     "\n",
