--- a/loading_scsam.ipynb
+++ b/loading_scsam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b9aba07b",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7258853d",
    "metadata": {},
    "outputs": [
@@ -49,19 +49,10 @@
       "[1.98841586e+36 6.28792305e+36 1.98841586e+37 6.28792305e+37\n",
       " 1.98841586e+38 6.28792305e+38 1.98841586e+39 6.28792305e+39\n",
       " 1.98841586e+40] kg\n",
-      "[0.03162278 0.05623413 0.1        0.31622777 0.56234133 1.\n",
-      " 1.77827941 3.16227766] dimensionless\n",
+      "[-1.5  -1.25 -1.   -0.5  -0.25  0.    0.25  0.5 ]\n",
       "[0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9  0.98] dimensionless\n",
       "1999\n",
       "100000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/home/snewman/myenv/lib/python3.12/site-packages/spectres/spectral_resampling.py:104: RuntimeWarning: Spectres: new_wavs contains values outside the range in spec_wavs, new_fluxes and new_errs will be filled with the value set in the 'fill' keyword argument (by default 0).\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
@@ -69,7 +60,7 @@
     "# Define the grid\n",
     "\n",
     "grid_dir = '/mnt/ceph/users/snewman/grids'\n",
-    "grid_name = 'qsosed.hdf5'\n",
+    "grid_name = 'qsosed_bigger.hdf5'\n",
     "grid_agn = Grid(grid_dir=grid_dir, grid_name=grid_name, ignore_lines=True)\n",
     "\n",
     "print(grid_agn.masses)\n",
@@ -84,12 +75,12 @@
     "print(len(grid_sps.lam))\n",
     "\n",
     "# Get the grid interpolated onto the new wavelength array\n",
-    "grid_sps.interp_spectra(new_lam=grid_agn.lam)\n"
+    "#grid_sps.interp_spectra(new_lam=grid_agn.lam)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "35d5682f",
    "metadata": {},
    "outputs": [
@@ -97,15 +88,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Python] Creating Sed took: 0.000193 seconds\n",
-      "[Python] Creating Sed took: 0.000063 seconds\n",
-      "[Python] Creating Sed took: 0.000101 seconds\n",
-      "[Python] Creating Sed took: 0.000080 seconds\n",
-      "[Python] Creating Sed took: 0.000105 seconds\n",
+      "[Python] Creating Sed took: 0.001284 seconds\n",
       "[Python] Creating Sed took: 0.000104 seconds\n",
-      "[Python] Creating Sed took: 0.000113 seconds\n",
       "[Python] Creating Sed took: 0.000101 seconds\n",
-      "[Python] Creating Sed took: 0.000104 seconds\n"
+      "[Python] Creating Sed took: 0.000061 seconds\n",
+      "[Python] Creating Sed took: 0.000060 seconds\n",
+      "[Python] Creating Sed took: 0.000061 seconds\n",
+      "[Python] Creating Sed took: 0.000086 seconds\n",
+      "[Python] Creating Sed took: 0.000058 seconds\n",
+      "[Python] Creating Sed took: 0.000057 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/home/snewman/myenv/lib/python3.12/site-packages/unyt/array.py:1832: RuntimeWarning: divide by zero encountered in log10\n",
+      "  out_arr = func(np.asarray(inp), out=out_func, **kwargs)\n"
      ]
     },
     {
@@ -114,7 +113,7 @@
        "Text(0.5, 0, '$\\\\rm M_{BH}/M_{\\\\odot}$')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -176,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "id": "fb0f4fe1",
    "metadata": {},
    "outputs": [
@@ -186,14 +185,14 @@
      "text": [
       "999706.3147310207 kg\n",
       "0.5 dimensionless\n",
-      "[Python] Creating Sed took: 0.000113 seconds\n",
+      "[Python] Creating Sed took: 0.000110 seconds\n",
       "[Python] Creating Sed took: 0.000062 seconds\n",
+      "[Python] Creating Sed took: 0.000062 seconds\n",
+      "[Python] Creating Sed took: 0.000060 seconds\n",
+      "[Python] Creating Sed took: 0.000059 seconds\n",
       "[Python] Creating Sed took: 0.000058 seconds\n",
-      "[Python] Creating Sed took: 0.000078 seconds\n",
-      "[Python] Creating Sed took: 0.000079 seconds\n",
-      "[Python] Creating Sed took: 0.000077 seconds\n",
-      "[Python] Creating Sed took: 0.000077 seconds\n",
-      "[Python] Creating Sed took: 0.000083 seconds\n"
+      "[Python] Creating Sed took: 0.000082 seconds\n",
+      "[Python] Creating Sed took: 0.000058 seconds\n"
      ]
     },
     {
@@ -202,7 +201,7 @@
        "Text(0.5, 0, 'accretion rate (Eddington)')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
